<resources>
    <string name="app_name">aNote</string>
    <string name="prompt_password">Password…</string>
    <string name="action_enter">Enter</string>
    <string name="error_incorrect_password">This password is incorrect.</string>
    <string name="error_field_required">This field is required</string>
    <string name="pin_fab_text">PIN</string>
    <string name="note_fab_text">NOTE</string>
    <string name="key">Key:</string>
    <string name="hint">Hint:</string>
    <string name="pin">Pin:</string>
    <string name="lock">Lock:</string>
    <string name="new_pin">New Pin</string>
    <string name="save">Save</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="cancel">Cancel</string>
    <string name="pin_placeholder">1234</string>
    <string name="key_placeholder">A</string>
    <string name="hint_placeholder">Hint...</string>
    <string name="fingerprint_intructions">Tap fingerprint to unlock...</string>
    <string name="note_title_placeholder">Title</string>
    <string name="db_encryption_enter_pw">
        Enter a password to encrypt the database.
    </string>
    <string name="db_encryption_info">
        This password is only required for initial encryption. Future access to the app
        requires fingerprint authorization only.
    </string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
</resources>
