<?xml version = "1.0" encoding = "utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:alignmentMode="alignBounds"
    android:columnCount="3"
    android:columnOrderPreserved="false"

    android:useDefaultMargins="true">

    <TextView
        android:id="@+id/key_text"
        android:textColor="@color/colorAccent"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/key"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/entered_key"
        android:layout_column="1"
        android:ems="6"
        android:inputType="text"
        android:maxLength="2"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/hint_text"
        android:textColor="@color/colorAccent"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/hint"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/entered_hint"
        android:layout_column="1"
        android:ems="6"
        android:inputType="text"
        android:maxLength="20"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/pin_text"
        android:textColor="@color/colorAccent"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:text="@string/pin"
        android:textSize="32sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/entered_pin"
        android:layout_column="1"
        android:ems="6"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/secure_text"
        android:textColor="@color/colorAccent"
        android:layout_column="0"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:text="@string/lock"
        android:textSize="32sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/pin_locked_checkbox"
        android:layout_height="60dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:ems="2"
        android:scaleX="2"
        android:scaleY="2" />

    <Button
        android:id="@+id/save_pin_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textSize="18sp" />

</GridLayout>