<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".db.encryption.activity.DbPasswordActivity">

    <TextView
        android:id="@+id/encrypt_pw_text"
        android:layout_width="382dp"
        android:layout_height="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="15dp"
        android:text="@string/db_encryption_enter_pw"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/encrypt_pw_info_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/encrypt_pw_info_text"
        android:layout_width="382dp"
        android:layout_height="90dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="40dp"
        android:text="@string/db_encryption_info"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/entered_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrypt_pw_text" />

    <EditText
        android:id="@+id/entered_password"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/entered_password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/encrypt_pw_info_text" />

    <EditText
        android:id="@+id/entered_password_confirmation"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/save_note_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entered_password" />

    <Button
        android:id="@+id/save_note_button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="106dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="60dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entered_password_confirmation" />
</android.support.constraint.ConstraintLayout>